# red-green-refactor

./: .gitignore  Cargo.toml  README.md  TODO.md  red-green-refactor-example.yaml  red-green-refactor.yaml  tdd-pair-real.yaml  tdd-pair.yaml
src/: main.rs  orchestrator.rs  vcs.rs  workspace.rs
src/providers/: gemini.rs  mock.rs  mod.rs  openai.rs
