[package]
name = "tdd-pair"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
regex = "1.10"
which = "6.0"
camino = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3.10"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
