[package]
name = "red-green-refactor"
version = "0.1.0"
edition = "2024"
description = "A simple Rust project to demonstrate the red-green-refactor cycle in TDD."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xpepper/red-green-refactor"

[[bin]]
name = "rgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"

[dev-dependencies]
